# discord-base

./: .travis.yml  Cargo.toml  README.md  SECURITY.md
doc/: settings.html
doc/discord_base/: fn.log.html  fn.print_and_write.html  fn.send_embed.html  sidebar-items.js  static.GENERAL_GROUP.html  static.GENERAL_GROUP_OPTIONS.html  static.MASTER_GROUP_OPTIONS.html
doc/discord_base/cmd_error/: index.html
doc/discord_base/cmd_help/: fn.cmd_help.html  index.html
doc/discord_base/cmd_info/: fn.cmd_info.html  index.html  static.CMD_INFO_COMMAND_OPTIONS.html
doc/discord_base/cmd_prefix/: fn.prefix_check.html  index.html  static.CMD_PREFIX_COMMAND.html
doc/discord_base/globals/: index.html  static.BOT_CONFIG.html  struct.CmdInfo.html
doc/implementors/typemap_rev/: trait.TypeMapKey.js
doc/src/discord_base/: cmd_error.rs.html  cmd_help.rs.html  cmd_prefix.rs.html  lib.rs.html
docs/: search-index.js  settings.html  source-files.js
docs/discord_base/: all.html  fn.log.html  fn.print_and_write.html  fn.send_embed.html  fn.set_dir.html  index.html  static.GENERAL_GROUP.html  static.GENERAL_GROUP_OPTIONS.html  static.MASTER_GROUP.html  static.MASTER_GROUP_OPTIONS.html  struct.General.html  struct.Handler.html  struct.Master.html
docs/discord_base/cmd_error/: fn.delay_action.html  fn.handle.html  index.html  sidebar-items.js
docs/discord_base/cmd_help/: fn.cmd_help.html  index.html  sidebar-items.js  static.CMD_HELP.html  static.CMD_HELP__OPTIONS.html
docs/discord_base/cmd_info/: fn.cmd_info.html  index.html  sidebar-items.js  static.CMD_INFO_COMMAND.html  static.CMD_INFO_COMMAND_OPTIONS.html
docs/discord_base/cmd_prefix/: fn.cmd_prefix.html  fn.prefix_check.html  index.html  sidebar-items.js  static.CMD_PREFIX_COMMAND.html  static.CMD_PREFIX_COMMAND_OPTIONS.html
docs/discord_base/globals/: constant.DEFAULT_CONFIG.html  fn.set_db.html  index.html  sidebar-items.js  static.BOT_CONFIG.html  static.BOT_INFO.html  static.CMD_INFO.html  struct.BotConfig.html  (+3 more)
src/: cmd_error.rs  cmd_help.rs  cmd_info.rs  cmd_options.rs  cmd_prefix.rs  command_error.rs  command_options.rs  commands.rs  config_parser.rs  globals.rs  lib.rs  main.rs  set_statics.rs  setup.rs  start.rs  utils.rs
src/commands/: config.rs  error.rs  general_group.rs  help.rs  mod.rs  options.rs
(+17 files in other folders)
