[package]
name = "discord-base"
version = "0.1.0"
authors = ["aria"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
once_cell = "1.5"
dashmap = "4.0"
chrono = "0.4"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.sqlx]
version = "0.5"
features = ["runtime-tokio-rustls", "sqlite"]

[dependencies.tokio]
version = "1.1"
features = ["rt-multi-thread"]

[dependencies.serenity]
version = "0.10"
default-features = false
features = [
    "cache",
    "client",
    "collector",
    "model",
    "standard_framework",
    "rustls_backend",
]
