[package]
name = "discord-base"
version = "0.1.0"
authors = ["aria-7553"]
edition = "2018"
description = "The crate I use to build my bots on top of, made using Serenity in Rust!"
readme = "README.md"
repository = "https://github.com/aria-7553/discord-base/"
license = "MIT OR Apache-2.0"
keywords = ["discord", "bots", "serenity"]
categories = ["database", "config", "accessibility", "authentication", "api-bindings"]

[dependencies]
toml = { version = "0.5", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"]}
once_cell = { version = "1.5", default-features = false }
chrono = { version = "0.4", default-features = false }
tokio = { version = "1.1", features = ["rt-multi-thread"] }
sqlx = { version = "0.5", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }
serenity = { version = "0.10", default-features = false, features = [
    "cache",
    "collector",
    "model",
    "standard_framework",
    "rustls_backend",
] }
